--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,42 @@
-baseURL = "http://blog.vv13.cn/"
-languageCode = "en-us"
-title = "vv13's blog"
-theme = "ananke"
+baseurl = "https://vv13.cn" # Hostname (and path) to the root.
+title = "🤪" # Site title.
+theme = "coder" # Set the theme.
+languagecode = "en" # The site’s language code.
 
-summaryLength = 150
-hasCJKLanguage = true
+paginate = 20 # Default number of pages per page in pagination.
+canonifyurls = true # Enable to turn relative URLs into absolute.
 
-[params]
-  featured_image = "/imgs/banner/rock.jpg"
-  Motto = "I'm no one."
+pygmentsstyle = "b2" # Color-theme or style for syntax highlighting.
+pygmentscodefences = true # Enable code fence background highlighting.
+pygmentscodefencesguesssyntax = true # Enable syntax guessing for code fences without specified language.
+
+[params] # theme parameters
+    author = "vv13" # Author's name.
+    info = "FRONT-END DEVELOPER " # Author's job title or info.
+    description = "vv13's personal website" # Site description.
+    keywords = "blog,developer,personal" # Site keywords.
+
+    disqusShortname = "vv13" # Enable or disable Disqus
+
+    # Whether you want to hide copyright and credits in the footer.
+    hideCredits = true
+    hideCopyright = false
+
+    # Custom CSS
+	custom_css = []
+
+# Social links
+[[params.social]]
+    name = "Github"
+    weight = 1
+    url = "https://github.com/vv13/"
+
+# Menu links
+[[menu.main]]
+    name = "Blog"
+    weight = 1
+    url  = "/posts/"
+[[menu.main]]
+    name = "About"
+    weight = 2
+    url = "/about/"
