--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,9 @@
-baseurl = "http://vv13.cn" # Hostname (and path) to the root.
-title = "🤪" # Site title.
+baseurl = "/" # Hostname (and path) to the root.
+title = "vv13" # Site title.
 theme = "coder" # Set the theme.
 languagecode = "en" # The site’s language code.
 
-paginate = 20 # Default number of pages per page in pagination.
+paginate = 99 # Default number of pages per page in pagination.
 canonifyurls = true # Enable to turn relative URLs into absolute.
 
 pygmentsstyle = "b2" # Color-theme or style for syntax highlighting.
@@ -30,6 +30,10 @@ pygmentscodefencesguesssyntax = true # Enable syntax guessing for code fences wi
     name = "Github"
     weight = 1
     url = "https://github.com/vv13/"
+[[params.social]]
+    name = "CodePen"
+    weight = 1
+    url = "https://codepen.io/vv13/"
 
 # Menu links
 [[menu.main]]
