replace qn host

--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ disqusShortname = "vv13" # Enable or disable Disqus.
 
     # Custom CSS
     custom_css = []
-    banner = "http://7xp5r4.com1.z0.glb.clouddn.com/18-9-12/24175809.jpg"
+    banner = "http://qn.vv13.cn/18-9-12/24175809.jpg"
 
 
 # Social links
