--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-styled-components": "^1.8.0",
     "gatsby": "^2.0.33",
     "gatsby-plugin-catch-links": "^2.0.8",
+    "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-styled-components": "^3.0.1",
     "gatsby-plugin-typography": "^2.2.1",
