--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,13 @@ language: node_js
 before_install:
 - openssl aes-256-cbc -K $encrypted_e22409fab3d2_key -iv $encrypted_e22409fab3d2_iv
   -in deploy_key.enc -out ./deploy_key -d
-- cd gatsby
-install: 
+- eval "$(ssh-agent -s)"
+- echo -e "Host $SERVER_IP\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+- ssh-add ./deploy_key
+- ssh -i ./deploy_key $SERVER_IP pwd
 script:
+- cd gatsby
 - npm i
 after_script:
 - npm run build
+- rsync -avz public $SERVER_IP:$SERVER_PATH
