--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
   -in deploy_key.enc -out ./deploy_key -d
 - eval "$(ssh-agent -s)"
 - echo -e "Host $SERVER_IP\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+- chmod 600 ./deploy_key
 - ssh-add ./deploy_key
 - ssh -i ./deploy_key $SERVER_IP pwd
 script:
