--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,20 @@
 language: node_js
+node_js:
+- "10"
+cache: npm
 before_install:
 - openssl aes-256-cbc -K $encrypted_e22409fab3d2_key -iv $encrypted_e22409fab3d2_iv
   -in deploy_key.enc -out ./deploy_key -d
 - eval "$(ssh-agent -s)"
-- echo -e "Host $SERVER_IP\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+- echo -e "Host $SERVER_IP \n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 - chmod 600 ./deploy_key
 - ssh-add ./deploy_key
-- ssh -i ./deploy_key $SERVER_IP pwd
+- ssh -i ./deploy_key root@$SERVER_IP pwd
 script:
+- pwd
+- ifconfig
 - cd gatsby
 - npm i
 after_script:
 - npm run build
-- rsync -avz public $SERVER_IP:$SERVER_PATH
+- rsync -avz public root@$SERVER_IP:$SERVER_PATH
