--- a/blog/package.json
+++ b/blog/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-media": "^1.8.0",
+    "react-responsive": "^6.1.1",
     "react-typography": "^0.16.13",
     "styled-components": "^4.1.1",
     "typography": "^0.16.17",
