--- a/blog/package.json
+++ b/blog/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.8.0",
-    "gatsby": "^2.3.4",
+    "gatsby": "2.3.4",
     "gatsby-plugin-catch-links": "^2.0.13",
+    "gatsby-plugin-feed": "^2.1.0",
     "gatsby-plugin-google-analytics": "^2.0.18",
     "gatsby-plugin-react-helmet": "^3.0.11",
     "gatsby-plugin-styled-components": "^3.0.7",
