--- a/.github/workflows/nodebuild.js.yml
+++ b/.github/workflows/nodebuild.js.yml
@@ -13,18 +13,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x]
     defaults:
       run:
         shell: bash
         working-directory: gatsby
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 12
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build
+        node-version: 12
+    - run: yarn
+    - run: yarn build
