--- a/.github/workflows/nodebuild.js.yml
+++ b/.github/workflows/nodebuild.js.yml
@@ -30,5 +30,5 @@ jobs:
       env:
         DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
         SERVER_DEST: ${{ secrets.SERVER_DEST }}
-        FOLDER: "public/"
+        FOLDER: "gatsby/public"
         OPTION: "-avzr --delete"
