--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -21,6 +21,7 @@
     "gatsby-remark-images": "^3.3.25",
     "gatsby-source-filesystem": "^2.0.28",
     "gatsby-transformer-remark": "^2.3.8",
+    "mermaid": "^8.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
