--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -1,36 +1,45 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "description": "Gatsby hello world starter",
-  "license": "MIT",
+  "name": "gatsby-blog",
+  "version": "1.0.0",
+  "private": true,
+  "description": "gatsby-blog",
+  "author": "vv13",
+  "keywords": [
+    "gatsby"
+  ],
   "scripts": {
     "develop": "gatsby develop",
-    "start": "npm run develop",
+    "start": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "format": "prettier --write \"src/**/*.js\""
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.8.0",
-    "gatsby": "^2.22.15",
-    "gatsby-plugin-catch-links": "^2.0.13",
-    "gatsby-plugin-feed": "^2.1.0",
-    "gatsby-plugin-google-analytics": "^2.0.18",
-    "gatsby-plugin-react-helmet": "^3.0.11",
-    "gatsby-plugin-sharp": "^2.6.27",
-    "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-typography": "^2.2.10",
-    "gatsby-remark-images": "^3.3.25",
-    "gatsby-source-filesystem": "^2.0.28",
-    "gatsby-transformer-remark": "^2.3.8",
-    "mermaid": "^8.8.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
-    "react-media": "^1.8.0",
-    "react-responsive": "^6.1.1",
-    "react-typography": "^0.16.19",
-    "styled-components": "^4.2.0",
-    "typography": "^0.16.19",
-    "typography-plugin-code": "^0.16.19",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "gatsby": "^3.11.1",
+    "gatsby-plugin-image": "^1.11.0",
+    "gatsby-plugin-mdx": "^2.11.0",
+    "gatsby-plugin-page-creator": "^3.11.0",
+    "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-plugin-typography": "^3.11.0",
+    "gatsby-remark-images": "^5.8.0",
+    "gatsby-source-filesystem": "^3.11.0",
+    "mermaid": "^8.11.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-responsive": "^9.0.0-beta.3",
+    "react-typography": "^0.16.20",
+    "styled-components": "^5.3.0",
+    "typography": "^0.16.21",
+    "typography-plugin-code": "^0.16.20",
     "typography-theme-github": "^0.16.19"
-  }
+  },
+  "main": "gatsby-config.js",
+  "devDependencies": {
+    "prettier": "^2.3.2"
+  },
+  "license": "ISC"
 }
