--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -18,11 +18,13 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.11.1",
     "gatsby-plugin-image": "^1.11.0",
     "gatsby-plugin-mdx": "^2.11.0",
     "gatsby-plugin-page-creator": "^3.11.0",
     "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-plugin-styled-components": "^4.12.0",
     "gatsby-plugin-typography": "^3.11.0",
     "gatsby-remark-images": "^5.8.0",
     "gatsby-source-filesystem": "^3.11.0",
