--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
     "prebuild": "npm run copyimages"
   },
   "dependencies": {
+    "@giscus/react": "^2.2.6",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
